--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,10 @@ build-and-test:
   stage: build
   script:
     - docker build -f Dockerfile .
+  rules:
+    - if: '$CI_COMMIT_TAG'
+      when: never
+    - when: always
 
 # This section describes what shall be done to deploy artefacts from the project.
 release:
@@ -49,3 +53,7 @@ release:
   script:
     - docker build -f Dockerfile -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
     - docker push "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG"
+  only:
+    - tags
+  rules:
+    - if: '$CI_COMMIT_TAG' =~ /^v\d+\.\d+\.\d+$/'
