--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,4 +56,4 @@ release:
   only:
     - tags
   rules:
-    - if: '$CI_COMMIT_TAG' =~ /^v\d+\.\d+\.\d+$/'
+    - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+$/'
