--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,8 @@ release:
   tags:
     - docker-build
   stage: deploy
+  rules:
+    - if: $CI_COMMIT_TAG
   script:
     - docker build -f Dockerfile --tag "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
     - docker push "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG"
