--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,6 @@ services:
   - name: docker:19.03.3-dind
 
 stages:
-  - test
   - build
   - deploy
 
@@ -33,17 +32,6 @@ stages:
 before_script:
   - docker info
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-
-# This section describes what shall be done to test the project
-
-
-run-tests:
-  - stage: test
-  - script:
-    - echo "Testing..."
-    - exit 0
-  rules:
-    - when: always
 
 # This section describes what shall be done to build and test the project.
 build-and-test:
@@ -59,5 +47,5 @@ release:
     - docker-build
   stage: deploy
   script:
-    - docker build -f Dockerfile --tag "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
+    - docker build -f Dockerfile -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
     - docker push "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG"
