--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,3 +49,5 @@ release:
   script:
     - docker build -f Dockerfile --tag "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
     - docker push "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG"
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+$/'
