--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,6 @@ services:
   - name: docker:19.03.3-dind
 
 stages:
-  - test
   - build
   - deploy
 
@@ -34,16 +33,6 @@ before_script:
   - docker info
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
-# This section describes what shall be done to test the source code
-
-run-tests:
-  stage: test
-  script:
-    - echo "Simulating test failure"
-    - exit 1 #Changed from 0 to 1 to simulate test failure
-  rules:
-    - when: always
-
 # This section describes what shall be done to build and test the project.
 build-and-test:
   tags:
@@ -51,6 +40,10 @@ build-and-test:
   stage: build
   script:
     - docker build -f Dockerfile .
+  rules:
+    - if: "$CI_COMMIT_TAG"
+      when: never
+    - when: always
 
 # This section describes what shall be done to deploy artefacts from the project.
 release:
@@ -60,3 +53,6 @@ release:
   script:
     - docker build -f Dockerfile -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
     - docker push "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG"
+
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+$/'
