--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ services:
 
 stages:
   - build
+  - test
   - deploy
 
 # Display information before we start the build.
@@ -41,9 +42,24 @@ build-and-test:
   script:
     - docker build -f Dockerfile .
   rules:
+    - if: "$CI_COMMIT_BRANCH"
+      when: always
     - if: "$CI_COMMIT_TAG"
       when: never
-    - when: always
+
+# Test job: Currently simulates a failure
+test-job:
+  tags:
+    - docker-build
+  stage: test
+  script:
+    - echo "Running tests..."
+    - exit 1
+  rules:
+    - if: "$CI_COMMIT_BRANCH"
+      when: always
+    - if: "$CI_COMMIT_TAG"
+      when: never
 
 # This section describes what shall be done to deploy artefacts from the project.
 release:
@@ -51,8 +67,7 @@ release:
     - docker-build
   stage: deploy
   script:
-    - docker build -f Dockerfile -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
+    - docker build -f Dockerfile --tag "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
     - docker push "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG"
-
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+$/'
