--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,14 +25,28 @@ services:
   - name: docker:19.03.3-dind
 
 stages:
-  - build
   - test
+  - build
   - deploy
 
 # Display information before we start the build.
 before_script:
   - docker info
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+
+# Test job: Currently simulates a succeed
+test-job:
+  tags:
+    - docker-build
+  stage: test
+  script:
+    - echo "Running tests..."
+    - exit 0
+  rules:
+    - if: "$CI_COMMIT_BRANCH"
+      when: always
+    - if: "$CI_COMMIT_TAG"
+      when: never
 
 # This section describes what shall be done to build and test the project.
 build-and-test:
@@ -41,20 +55,6 @@ build-and-test:
   stage: build
   script:
     - docker build -f Dockerfile .
-  rules:
-    - if: "$CI_COMMIT_BRANCH"
-      when: always
-    - if: "$CI_COMMIT_TAG"
-      when: never
-
-# Test job: Currently simulates a failure
-test-job:
-  tags:
-    - docker-build
-  stage: test
-  script:
-    - echo "Running tests..."
-    - exit 1
   rules:
     - if: "$CI_COMMIT_BRANCH"
       when: always
