--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,39 +35,41 @@ before_script:
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
 # This section describes what shall be done to build and test the project.
-build-and-test:
+build:
+  stage: build
   tags:
     - docker-build
-  stage: build
   script:
     - docker build -f Dockerfile .
   rules:
-    - if: "$CI_COMMIT_BRANCH"
-      when: always
     - if: "$CI_COMMIT_TAG"
+      when: always
+    - if: "$CI_COMMIT_BRANCH"
       when: never
 
 # Test job: Currently simulates a succeed
-test-job:
+test:
+  stage: test
   tags:
     - docker-build
-  stage: test
   script:
-    - echo "Test simulation..."
+    - echo "Running tests..."
     - exit 0
   rules:
-    - if: "$CI_COMMIT_BRANCH"
-      when: always
     - if: "$CI_COMMIT_TAG"
       when: never
+    - if: "$CI_COMMIT_BRANCH"
+      when: always
 
 # This section describes what shall be done to deploy artefacts from the project.
 release:
+  stage: deploy
   tags:
     - docker-build
-  stage: deploy
   script:
-    - docker build -f Dockerfile --tag "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
-    - docker push "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG"
+    - docker build -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG" -f Dockerfile .
+    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG"
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+$/'
+      when: always
+    - when: never
