--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ build:
   tags:
     - docker-build
   script:
-    - docker build -f Dockerfile .
+    - docker build --format=docker -f Dockerfile .
   rules:
     - if: "$CI_COMMIT_TAG"
       when: never
