--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,6 @@ before_script:
   - docker info
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
-
 # This section describes what shall be done to build and test the project.
 build-and-test:
   tags:
@@ -42,15 +41,23 @@ build-and-test:
   stage: build
   script:
     - docker build -f Dockerfile .
+  rules:
+    - if: "$CI_COMMIT_TAG"
+    when: never
 
-    # This section describes what shall be done to test the source code
-run-tests:
+test:
   stage: test
+  tags:
+    - docker-build
   script:
-    - echo "Testing..."
+    - echo "Running tests..."
     - exit 0
   rules:
-    - when: always
+    - if: "$CI_COMMIT_TAG"
+      when: never
+    - if: "$CI_COMMIT_BRANCH"
+      when: always
+
 
 # This section describes what shall be done to deploy artefacts from the project.
 release:
