--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,8 @@ build-and-test:
   rules:
     - if: "$CI_COMMIT_TAG"
     when: never
+     - if: "$CI_COMMIT_BRANCH"
+      when: always
 
 test:
   stage: test
