--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,11 +40,11 @@ build:
   tags:
     - docker-build
   script:
-    - docker build --format=docker -f Dockerfile .
+    - docker build -f Dockerfile .
   rules:
     - if: "$CI_COMMIT_TAG"
       when: never
-    - if: "$CI_COMMIT_BRANCH"
+    - if: '$CI_PIPELINE_SOURCE == "push" || $CI_PIPELINE_SOURCE == "merge_request_event"'
       when: always
 
 # Test job: Currently simulates a succeed
