--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,9 @@ build:
     - docker-build
   script:
     - docker build -f Dockerfile .
+  rules:
+    - if: "$CI_COMMIT_TAG"
+      when: never
 
 # Test job: Currently simulates a succeed
 test:
