--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,8 @@ build:
   rules:
     - if: "$CI_COMMIT_TAG"
       when: never
+    - if: "$CI_COMMIT_BRANCH"
+      when: always
 
 # Test job: Currently simulates a succeed
 test:
