--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,13 +63,12 @@ test:
 
 # This section describes what shall be done to deploy artefacts from the project.
 release:
-  stage: deploy
   tags:
     - docker-build
+  stage: deploy
   script:
-    - echo "Run deployment"
-    - docker build -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG" -f Dockerfile .
-    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG"
+    - docker build -f Dockerfile --tag "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG" .
+    - docker push "$CI_REGISTRY_IMAGE":"$CI_COMMIT_TAG"
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+$/'
       when: always
